# gangway

./: .gitignore  404.html  Dockerfile  Makefile  README.md  go.mod  go.sum  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: deploy-docs.yml
assets/: fs_test.go
chart/: Chart.yaml  README.md  values.yaml
chart/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  secret.yaml  secrets-ca.yaml
cmd/gangway/: handlers.go  healthcheck.go  healthcheck_test.go  main.go
docs/: configuration.md  configuration_fr.md  dex.md  index.fr.md  index.md
docs/getting-started/: api-flags.fr.md  api-flags.md  build.fr.md  build.md  deployment.fr.md  deployment.md  helm-deployment.fr.md  helm-deployment.md
docs/how-it-work/: auth0.md  custom-templates.fr.md
docs/how-it-works/: auth0.fr.md  custom-templates.fr.md  custom-templates.md  dex.fr.md  google.fr.md  google.md  how-it-works.fr.md  how-it-works.md
fr/: index.html
getting-started/api-flags/: index.html
getting-started/configuration/: index.html
getting-started/deployment/: index.html
getting-started/helm-deployment/: index.html
how-it-works/auth0/: index.html
how-it-works/custom-templates/: index.html
how-it-works/dex/: index.html
how-it-works/google/: index.html
how-it-works/how-it-works/: index.html
internal/config/: config.go  config_test.go
internal/jwt/: jwt.go  jwt_test.go
internal/oidconfig/: oidc.go  oidc_test.go
internal/session/: session.go  session_test.go  (+1 more)
search/: search_index.json
templates/: clustersHome.tmpl  commandline.tmpl  fs_test.go  home.tmpl
(+9 files in other folders)
