[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gangway"
version = "1.0"
description = "Gangway Kubernetes configuration generator documentation"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Numberly", email = "guillaume.legrain@numberly.com" },
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
]
dependencies = [
    "mkdocs>=1.5.3",
]

[project.urls]
Documentation = "https://github.com/numberly/gangway#readme"
Download = "https://github.com/numberly/gangway/tags"
Homepage = "https://github.com/numberly/gangway"
Source = "https://github.com/numberly/gangway"
Tracker = "https://github.com/numberly/gangway/issues"

[project.optional-dependencies]
material = ["mkdocs-material>=9.2.5"]

[tool.hatch.envs.docs]
dependencies = [
    "mkdocs-material>=9.2.5"
]
